tests/declaration_files_parse_error/declaration_files_parse_error.exp
Error ----------------------------------------------------------------------------------------------- pragma.js.flow:3:6

Unexpected identifier, expected the end of an expression statement (`;`)

   3| this is a parse error
           ^^



Found 1 error
